# fastapi-genai-app

./: client.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
models/: audio.py  image.py  text.py
