[project]
name = "fastapi-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "requests>=2.28.1",
    "soundfile>=0.13.1",
    "streamlit>=1.51.0",
    "torch>=2.6.0",
    "transformers>=4.57.1",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
